# agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
frontent/: biome.json  index.html  package-lock.json  package.json  tailwind.config.ts
frontent/src/: App.tsx  index.css  main.tsx
frontent/src/components/: ProcessTimeline.tsx  QueryComposer.tsx  StreamAnswerPanel.tsx
frontent/src/services/: workflowStream.ts
frontent/src/stores/: answerStreamStore.ts
frontent/src/types/: workflow.ts
src/ai_multi_agent/: app.py  main.py
src/ai_multi_agent/agents/: base.py  critic.py  data_fetcher.py  planner.py  researcher.py  retail_parser.py  synthesizer.py
src/ai_multi_agent/api/: dependencies.py  router.py
src/ai_multi_agent/api/routes/: workflows.py
src/ai_multi_agent/core/: config.py
src/ai_multi_agent/graph/: builder.py  state.py
src/ai_multi_agent/llm/: providers.py
src/ai_multi_agent/schemas/: workflow.py
src/ai_multi_agent/services/: workflow.py
tests/: test_health.py  test_retail_parser.py  test_settings.py  test_workflow.py
